--- a/app/design/frontend/base/default/template/directory/currency.phtml
+++ b/app/design/frontend/base/default/template/directory/currency.phtml
@@ -13,7 +13,7 @@
 ?>
 <?php if ($this->getCurrencyCount() > 1): ?>
 <div class="currency-switcher">
-    <label for="select-currency"><?= $this->__('Your Currency:') ?></label>
+    <label for="select-currency" class="visually-hidden"><?= $this->__('Your Currency:') ?></label>
     <select id="select-currency" name="currency" title="<?= $this->quoteEscape($this->__('Your Currency')) ?>" onchange="setLocation(this.value)">
         <?php foreach ($this->getCurrencies() as $_code => $_name): ?>
         <option value="<?= $this->getSwitchCurrencyUrl($_code) ?>"<?php if($_code==$this->getCurrentCurrencyCode()): ?> selected="selected"<?php endif ?>>
