--- a/app/design/frontend/base/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/base/default/template/newsletter/subscribe.phtml
@@ -12,16 +12,12 @@
 /** @var Mage_Newsletter_Block_Subscribe $this */
 ?>
 <div class="block block-subscribe">
-    <div class="block-title">
-        <strong><span><?= $this->__('Newsletter') ?></span></strong>
-    </div>
+    <div class="block-title"><?= $this->__('Newsletter') ?></div>
     <form action="<?= $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail">
         <?= $this->getBlockHtml('formkey') ?>
         <div class="block-content">
-            <div class="form-subscribe-header">
-                <label for="newsletter"><?= $this->__('Sign Up for Our Newsletter:') ?></label>
-            </div>
             <div class="input-box">
+                <label for="newsletter" class="visually-hidden"><?= $this->__('Sign Up for Our Newsletter:') ?></label>
                <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?= $this->quoteEscape($this->__('Sign up for our newsletter')) ?>" class="input-text required-entry validate-email" aria-required="true" />
             </div>
             <div class="actions">
