--- a/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
@@ -69,8 +69,8 @@
             <?php $availableLimits = $this->getAvailableLimit() ?>
             <?php if (count($availableLimits) > 1): ?>
                 <div class="limiter">
-                    <label><?= $this->__('Show') ?></label>
-                    <select onchange="window.location.href=this.value" title="<?= $this->quoteEscape($this->__('Results per page')) ?>">
+                    <label for="limiter-toolbar-top"><?= $this->__('Show') ?></label>
+                    <select id="limiter-toolbar-top" onchange="window.location.href=this.value" title="<?= $this->quoteEscape($this->__('Results per page')) ?>">
                     <?php foreach ($availableLimits as $_key => $_limit): ?>
                         <option value="<?= $this->getLimitUrl($_key) ?>"<?php if($this->isLimitCurrent($_key)): ?> selected="selected"<?php endif ?>>
                             <?= $_limit ?>
