--- a/app/design/frontend/base/default/template/page/html/pager.phtml
+++ b/app/design/frontend/base/default/template/page/html/pager.phtml
@@ -8,13 +8,8 @@
  * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
-/**
- * Pager template
- *
- * @var Mage_Page_Block_Html_Pager $this
- */
+
+/** @var Mage_Page_Block_Html_Pager $this */
 ?>
 <?php if($this->getCollection()->getSize()): ?>
 
