--- a/app/design/frontend/base/default/layout/checkout.xml
+++ b/app/design/frontend/base/default/layout/checkout.xml
@@ -337,6 +337,8 @@ One page checkout main layout
         <!-- Mage_Checkout -->
         <remove name="left"/>
 
+        <update handle="page_minimal" ifconfig="checkout/options/minimal_layout"/>
+
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
         </reference>
@@ -543,21 +545,4 @@ One page checkout order review block
             <block type="checkout/onepage_failure" name="checkout.failure" template="checkout/onepage/failure.phtml"/>
         </reference>
     </checkout_onepage_failure>
-
-    <!-- Minimal checkout layout - only logo in header, no footer -->
-    <checkout_onepage_minimal translate="label">
-        <remove name="header"/>
-        <remove name="footer"/>
-        <remove name="footer.before"/>
-
-        <reference name="head">
-            <action method="removeItem"><type>skin_js</type><name>js/app.js</name></action>
-            <action method="removeItem"><type>skin_js</type><name>js/minicart.js</name></action>
-        </reference>
-
-        <reference name="after_body_start">
-            <block type="core/template" name="minimal.header" before="-" template="page/html/header_minimal.phtml"/>
-        </reference>
-    </checkout_onepage_minimal>
-
 </layout>
