--- a/app/design/frontend/base/default/template/page/html/header_minimal.phtml
+++ b/app/design/frontend/base/default/template/page/html/header_minimal.phtml
@@ -7,14 +7,10 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/** @var Mage_Core_Block_Template $this */
-$logoSrc = Mage::getStoreConfig('design/header/logo_src') 
-    ? Mage::getDesign()->getSkinUrl(Mage::getStoreConfig('design/header/logo_src'))
-    : $this->getSkinUrl('images/logo.png');
-$logoAlt = Mage::getStoreConfig('design/header/logo_alt') ?: Mage::getStoreConfig('general/store_information/name');
+/** @var Mage_Page_Block_Html_Header $this */
 ?>
-<div style="text-align: center; margin-top: 10px">
-    <a href="<?= $this->getUrl('') ?>" title="<?= $this->__('Go to Home Page') ?>">
-        <img src="<?= $logoSrc ?>" alt="<?= $logoAlt ?>" style="display: inline-block; max-height: 50px; width: auto;" />
+<header id="header" class="page-header-minimal" role="banner">
+    <a class="logo" href="<?= $this->getUrl('') ?>" title="<?= $this->__('Go to Home Page') ?>" aria-label="<?= $this->__('%s - Go to Home Page', $this->getLogoAlt()) ?>">
+        <img src="<?= $this->getLogoSrc() ?>" alt="<?= $this->getLogoAlt() ?>" width="<?= $this->getLogoWidth() ?>" height="<?= $this->getLogoHeight() ?>" />
     </a>
-</div>
+</header>
