--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -2655,6 +2655,7 @@ body {
 .page-header-container {display: flex; place-items: center; gap: 0.5rem;padding-top:0.5rem}
 .page-header-container > div {display: flex; place-items: center; gap: 0.5rem}
 .page-header-container > div:first-of-type > a:first-of-type {display: none}
+.page-header-minimal {display:flex; flex-direction: column; align-items: center; gap: 0.5rem; padding-top: 0.5rem}
 
 @media (max-width: 770px) {
   .page-header-container > div:first-of-type a:first-of-type {display: block}
@@ -2686,7 +2687,6 @@ body {
  * ============================================ */
 
 .logo img {
-  width: auto;
   max-height: 50px;
 }
 
