--- a/app/design/frontend/base/default/layout/page.xml
+++ b/app/design/frontend/base/default/layout/page.xml
@@ -206,6 +206,7 @@
             <action method="setTemplate"><template>page/html/header_minimal.phtml</template></action>
         </reference>
         <reference name="footer">
+            <action method="setIsMinimal"><flag>1</flag></action>
             <action method="setTemplate"><template>page/html/footer_minimal.phtml</template></action>
         </reference>
         <remove name="footer.before"/>
