--- a/public/skin/adminhtml/default/default/maho/media-library.css
+++ b/public/skin/adminhtml/default/default/maho/media-library.css
@@ -2,16 +2,11 @@
  * Maho
  *
  * @package     default_default  
- * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Media Library specific styles
- * Applies the file grid layout used in dialogs to the standalone Media Library page
- */
-
-/* Main layout structure */
+/* Main layout */
 .media-library-layout {
     display: flex;
     min-height: 500px;
@@ -44,13 +39,13 @@
     width: 100px;
     float: left;
     text-align: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-#contents .filecnt:hover {
-    border-color: #ea7601;
-    background: #fdf4e5;
-}
-
+#contents .filecnt:hover,
 #contents .filecnt.selected {
     border-color: #ea7601;
     background: #fdf4e5;
@@ -80,41 +75,18 @@
     word-wrap: break-word;
 }
 
-/* Clear floats after file grid */
+#contents {
+    padding: 10px;
+    min-height: 400px;
+}
+
 #contents::after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Content area spacing */
-#contents {
-    padding: 10px;
-    min-height: 400px;
-}
-
-/* Tree styling */
-.media-library-left .tree {
-    font-size: 12px;
-}
-
-.media-library-left .tree li {
-    list-style: none;
-    margin: 2px 0;
-}
-
-.media-library-left .tree a {
-    text-decoration: none;
-    color: #333;
-    padding: 2px 4px;
-    display: block;
-}
-
-.media-library-left .tree a:hover {
-    background: #f0f0f0;
-}
-
-/* Content header styling */
+/* Header */
 .content-header {
     border-bottom: 1px solid #ddd;
     margin-bottom: 10px;
@@ -125,27 +97,4 @@
     margin: 0;
     font-size: 14px;
     color: #333;
-}
-
-/* Media Library specific file behavior */
-.media-library-file {
-    cursor: pointer;
-}
-
-.media-library-file.selected {
-    border-color: #ea7601 !important;
-    background: #fdf4e5 !important;
-}
-
-.media-library-file:hover {
-    border-color: #ea7601;
-    background: #f9f9f9;
-}
-
-/* Disable text selection on file items */
-.media-library-file {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
