--- a/app/design/adminhtml/default/default/template/cms/browser/media-library-main.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/media-library-main.phtml
@@ -7,6 +7,8 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
+/** @var Mage_Core_Block_Template $this */
+
 $content = $this->getLayout()->createBlock('adminhtml/cms_mediaLibrary_content');
 $tree = $this->getLayout()->createBlock('adminhtml/cms_wysiwyg_images_tree');
 $uploader = $this->getLayout()->createBlock('adminhtml/cms_wysiwyg_images_content_uploader');
