--- a/app/design/adminhtml/default/default/template/cms/browser/content/uploader.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/content/uploader.phtml
@@ -3,14 +3,16 @@
  * Maho
  *
  * @package     default_default
+ * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
+ * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
  * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 <script>
-document.addEventListener('uploader:success', (event) => {
-    if (MediabrowserInstance?.handleUploadComplete) {
-        MediabrowserInstance.handleUploadComplete(event.detail.files || []);
-    }
-});
+    document.addEventListener('uploader:success', (event) => {
+        if (MediabrowserInstance?.handleUploadComplete) {
+            MediabrowserInstance.handleUploadComplete(event.detail.files || []);
+        }
+    });
 </script>
