--- a/app/design/adminhtml/default/default/layout/cms.xml
+++ b/app/design/adminhtml/default/default/layout/cms.xml
@@ -86,7 +86,7 @@
             <action method="addJs"><script>maho-tree.js</script></action>
             <action method="addJs"><script>sortable.min.js</script></action>
             <action method="addJs"><script>maho-dialog.js</script></action>
-            <action method="addItem"><type>skin_css</type><name>maho/media-library.css</name></action>
+            <action method="addItem"><type>skin_css</type><name>media-library.css</name></action>
         </reference>
         <reference name="content">
             <action method="unsetChildren" />
