--- a/app/design/frontend/base/default/template/blog/list.phtml
+++ b/app/design/frontend/base/default/template/blog/list.phtml
@@ -61,10 +61,10 @@ $posts = $this->getPosts();
     }
 
     .blog_post_item > img {
-        width: 100%;
+        width: calc(100% + 1.875rem);
         height: 12.5rem;
+        margin: -0.9375rem -0.9375rem 0.75rem -0.9375rem;
         object-fit: cover;
-        border-radius: 0.25rem;
-        margin-bottom: 0.75rem;
+        border-radius: 0.5rem 0.5rem 0 0;
     }
 </style>
