--- a/app/design/adminhtml/default/default/template/media/uploader.phtml
+++ b/app/design/adminhtml/default/default/template/media/uploader.phtml
@@ -5,7 +5,7 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -28,6 +28,17 @@
 <script type="text/javascript">
     (function() {
         var uploader = new Uploader(<?= $this->getJsonConfig() ?>);
+        
+        // Hook into uploader events to refresh Media Library content after upload
+        if (uploader && uploader.addEventListener) {
+            uploader.addEventListener('success', function(files) {
+                if (window.MediabrowserInstance && window.MediabrowserInstance.updateContent) {
+                    setTimeout(() => {
+                        window.MediabrowserInstance.updateContent();
+                    }, 200);
+                }
+            });
+        }
 
         if (varienGlobalEvents) {
             varienGlobalEvents.attachEventHandler('tabChangeBefore', uploader.onContainerHideBefore);
