--- a/app/design/adminhtml/default/default/template/cms/browser/content.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/content.phtml
@@ -24,9 +24,11 @@
     </table>
 </div>
 
-<div id="contents-alt-text" class="no-display">
-    <label><?= $this->__('Alt text:') ?> <input name="alt" value="<?= $this->escapeHtml($this->getAltText()) ?>" class="input-text validate-text validate-length max-length-125"></label>
+<div class="media-library-content">
+    <div id="contents-alt-text" class="no-display">
+        <label><?= $this->__('Alt text:') ?> <input name="alt" value="<?= $this->escapeHtml($this->getAltText()) ?>" class="input-text validate-text validate-length max-length-125"></label>
+    </div>
+    <div id="contents-uploader"><?= $this->getChildHtml('wysiwyg_images.uploader') ?></div>
+    <div id="contents"></div>
+    <div id="contents-newfolder" class="no-display"><?= $this->getChildHtml('wysiwyg_images.newfolder') ?></div>
 </div>
-<div id="contents-uploader"><?= $this->getChildHtml('wysiwyg_images.uploader') ?></div>
-<div id="contents"></div>
-<div id="contents-newfolder" class="no-display"><?= $this->getChildHtml('wysiwyg_images.newfolder') ?></div>
