--- a/app/design/adminhtml/default/default/template/media/uploader.phtml
+++ b/app/design/adminhtml/default/default/template/media/uploader.phtml
@@ -25,24 +25,8 @@
         <div class="clear"></div>
     </div>
 </div>
-<script type="text/javascript">
-    (function() {
-        var uploader = new Uploader(<?= $this->getJsonConfig() ?>);
-        
-        // Hook into uploader events to refresh Media Library content after upload
-        if (uploader && uploader.addEventListener) {
-            uploader.addEventListener('success', function(files) {
-                if (window.MediabrowserInstance && window.MediabrowserInstance.updateContent) {
-                    setTimeout(() => {
-                        window.MediabrowserInstance.updateContent();
-                    }, 200);
-                }
-            });
-        }
-
-        if (varienGlobalEvents) {
-            varienGlobalEvents.attachEventHandler('tabChangeBefore', uploader.onContainerHideBefore);
-        }
-    })();
+<script type="module">
+    const uploader = new Uploader(<?= $this->getJsonConfig() ?>);
+    varienGlobalEvents?.attachEventHandler('tabChangeBefore', uploader.onContainerHideBefore);
 </script>
 <?= $this->getChildHtml('additional_scripts') ?>
