--- a/app/design/adminhtml/default/default/template/cms/browser/tree.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/tree.phtml
@@ -60,7 +60,7 @@
     });
 
     tree.expandPath('<?= $this->getTreeCurrentPath() ?>').then((node) => {
-        MediabrowserInstance.selectFolder(node).then(() => {
+        MediabrowserInstance.selectFolder(node, true).then(() => {
             MediabrowserInstance.selectFileById('<?= $this->getTreeCurrentFile() ?>');
         });
     });
