--- a/public/js/mage/adminhtml/wysiwyg/tiptap/tiptap.css
+++ b/public/js/mage/adminhtml/wysiwyg/tiptap/tiptap.css
@@ -336,31 +336,34 @@
 
 /* Tooltip for widgets and images */
 .ProseMirror span[data-type=maho-widget],
+.ProseMirror div[data-type=maho-slideshow],
 .ProseMirror .image-container {
-    position: relative;
+    &[title] {
+        position: relative;
 
-    &::after {
-        content: attr(title);
-        position: absolute;
-        bottom: 100%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-4px);
-        background: #1f2937;
-        color: white;
-        padding: 0.25rem 0.5rem;
-        border-radius: 0.375rem;
-        font-size: 0.75rem;
-        font-weight: 500;
-        white-space: nowrap;
-        opacity: 0;
-        pointer-events: none;
-        transition: all 0.2s;
-        z-index: 1000;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-    }
+        &::after {
+            content: attr(title);
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-4px);
+            background: #1f2937;
+            color: white;
+            padding: 0.25rem 0.5rem;
+            border-radius: 0.375rem;
+            font-size: 0.75rem;
+            font-weight: 500;
+            white-space: nowrap;
+            opacity: 0;
+            pointer-events: none;
+            transition: all 0.2s;
+            z-index: 1000;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        }
 
-    &:hover::after {
-        opacity: 1;
+        &:hover::after {
+            opacity: 1;
+        }
     }
 }
 
@@ -438,6 +441,38 @@
     bottom: -5px; right: -5px;
 }
 
+/* Slideshow placeholder */
+.ProseMirror div[data-type=maho-slideshow] {
+    max-width: 1260px;
+    img {
+        max-width: 100%;
+    }
+    .slideshow:empty {
+        aspect-ratio: 2;
+        border: 1px dotted #636363;
+    }
+    .slideshow-dots {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .slideshow-dots .dot {
+        height: 8px;
+        width: 8px;
+        background-color: #cccccc;
+        border-radius: 50%;
+        display: inline-block;
+        margin: 0 5px;
+        cursor: pointer;
+    }
+    .slideshow-dots .dot.active {
+        background-color: #636363;
+    }
+    &:hover, &.ProseMirror-selectednode {
+        border-color: transparent;
+        outline: 2px solid #3b82f6;
+        outline-offset: 1px;
+    }
+}
 
 /* Tooltip styles for custom buttons */
 .tiptap-toolbar button[title] {
